syntax = "proto3";

option csharp_namespace = "TestService.Protos";

package test;

service TestService {
    rpc PurchaseRequest (SharePurchaseRequest) returns (SharePurchaseReceipt);
}

message SharePurchaseRequest {
    int32 ShareHolderId = 1;
    repeated int32 ShareIds = 2;
}

message SharePurchaseReceipt {
    repeated int32 ShareIds = 2;
}
